# shlug-s0

./: .gitignore  ChangeLog.md  default.nix  release.nix  shell.nix  shlug-s0.cabal
src/: Main.hs  S0.hs  Type.hs
